# drone-project

./: CMakeLists.txt  README.md  facedetect.cpp  hogdetect.cpp
